Fixed text wrapping

--- a/PencilCase.Web/Components/ScrollingTagList.razor.css
+++ b/PencilCase.Web/Components/ScrollingTagList.razor.css
@@ -9,9 +9,9 @@
 }
 
 .scroller__inner {
-    padding-block: 1rem;
     display: flex;
     flex-wrap: wrap;
+    white-space: nowrap;
 }
 
 .scroller[data-animated=true] {
